# mf-sbi-client

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/specs/accounts/: list.md  refresh.md  show.md
docs/specs/analysis/: diagnosis.md  monthly_report.md
docs/specs/assets/: history.md  portfolio.md
docs/specs/auth/: login.md
docs/specs/cf/: create.md  excel.md  monthly.md  summary.md  transactions.md  update.md
src/mf_sbi_client/: __init__.py  __main__.py  cli.py  config.py  errors.py  http_client.py  logging_setup.py  models.py
src/mf_sbi_client/_cli/: __init__.py  _util.py  accounts.py  analysis.py  assets.py  auth.py  cf.py
src/mf_sbi_client/_domains/: __init__.py  _core.py  _shared.py  accounts.py  analysis.py  assets.py  cf.py
