[project]
name = "mf-sbi-client"
version = "0.3.1"
description = "マネーフォワード for 住信SBIネット銀行 の非公式クライアントライブラリ + CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
mf-sbi = "mf_sbi_client.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "ruff>=0.6",
    "types-beautifulsoup4",
]

[build-system]
requires = ["uv_build>=0.6,<1"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
